# pharmacare-pro

./: .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  copilot-instructions.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  work_item.yml
.github/workflows/: build.yml  release.yml  sync-labels.yml
docs/: DELIVERY_PLAN.md  GITHUB_LIVE_PROJECT_SETUP.md  GITHUB_PROJECT_MASTER_CHECKLIST.md  POST_RESTORE_UI_SMOKE_WORKFLOW.md  PRINTER_QA_WORKFLOW.md  PRODUCTION_READINESS_CHECKLIST.md  RELEASE_GATE_P0.md  WORKFLOW_AND_MVP_EXECUTION_PLAN.md  WSL_MIGRATION.md
docs/post-restore-smoke-reports/: post-restore-ui-smoke-20260311_184203.md
docs/post-restore-smoke-reports/archive/: post-restore-ui-smoke-20260311_183501.md
docs/printer-qa-reports/: manual-printer-qa-20260311_184202.md
docs/printer-qa-reports/archive/: manual-printer-qa-20260311_182537.md  manual-printer-qa-20260311_182617.md
scripts/: backup-restore-drill.sh  github-bootstrap.ps1  github-issues-mvp0.md  github-phase-board-setup.ps1  permission-command-audit.sh  post-restore-smoke-check.sh  post-restore-ui-smoke-report.sh  printer-dispatch-smoke.sh  printer-manual-qa-report.sh  release-gate-p0.sh  run-golden-backup-drill.sh  run-p0-validation-pack.sh  seed-golden-dataset.sh  wsl-bootstrap.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: background.rs  db.rs  error.rs  lib.rs  main.rs  security.rs  server.rs
src-tauri/src/commands/: ai.rs  ai_commands.rs  auth.rs  backup.rs  barcode.rs  billing.rs  collections.rs  compliance.rs  customer.rs  dashboard.rs  email_import.rs  expenses.rs  gst.rs  inventory.rs  license.rs  medicine.rs  mod.rs  network.rs  onboarding.rs  permission.rs  printer.rs  purchase.rs  purchase_orders.rs  reports.rs  reports_sprint11.rs  reports_sprint8.rs  schemes.rs  settings.rs  sms.rs  supplier_credit.rs  tech.rs
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/shared/: ConfirmDialog.tsx  EmptyState.tsx  FormField.tsx  LoadingSpinner.tsx  PageHeader.tsx  Spinner.tsx  StatusBadge.tsx
src/db/migrations/: 001_initial.sql  002_compliance.sql  002_print_jobs.sql  003_sprint8.sql  004_sprint9.sql  005_sprint10.sql  006_sprint11.sql  007_sprint12.sql
src/hooks/: useDebounce.ts  useKeyboard.ts  usePermission.ts  useSettings.ts  useToast.ts
src/pages/AI/: WhatsAppComposer.tsx  index.tsx
src/pages/Auth/: index.tsx
src/pages/Barcodes/: index.tsx
src/pages/Billing/: index.tsx
src/pages/Bills/: index.tsx
src/pages/Collections/: index.tsx
src/pages/Compliance/: index.tsx
src/pages/Customers/: index.tsx
src/pages/Dashboard/: LicenceAlertBanner.tsx  index.tsx
src/pages/Doctors/: index.tsx
src/pages/Expenses/: index.tsx
src/pages/Expiry/: index.tsx
src/pages/GSTCompliance/: index.tsx
src/pages/Medicine/: index.tsx
src/pages/ModulePlaceholder/: index.tsx
src/pages/Network/: index.tsx
src/pages/Onboarding/: index.tsx
src/pages/Purchase/: index.tsx
src/pages/PurchaseOrders/: index.tsx
src/pages/Reports/: index.tsx
src/services/: aiService.ts  authService.ts  backupService.ts  barcodeService.ts  billingService.ts  claudeService.ts  collectionService.ts  complianceService.ts  customerService.ts  dashboardService.ts  emailImportService.ts  expenseService.ts  gstService.ts  inventoryService.ts  licenseService.ts  medicineService.ts  networkService.ts  printerService.ts  purchaseOrderService.ts  purchaseService.ts  reportService.ts  schemeService.ts  settingsService.ts  supplierCreditService.ts  supplierService.ts
src/store/: authStore.ts  cartStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: barcode.ts  cn.ts  currency.ts  date.ts  gst.test.ts  gst.ts  transport.ts  validation.ts
(+13 files in other folders)
